a little change made

--- a/index.html
+++ b/index.html
@@ -15,21 +15,9 @@
     <nav class="navbar navbar-expand-lg bg-dark ">
         <div class="container-fluid ">
             <a class="navbar-brand text-white" href="#">Tic Tac Toe</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
-
+   <h1 class="text-center m-4">My Tictac Toe</h1>
     <div class="gameContainer">
         <div class="Container">
             <div class="box bl bt"><span class="boxtext"></div>
@@ -43,9 +31,7 @@
             <div class="box bb br"><span class="boxtext"></span></div>
         </div>
         <div class="gameinfo">
-            <h1>My Tictac Toe</h1>
             <div>
-                <!-- why can t i use $ here -->
                 <span class="info"> Turn of 0</span>
                 <button id="reset">Reset</button>
             </div>
